@startuml

title __ANMELDEN's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.anmelden {
      class com.example.edelhome.ui.anmelden.AnmeldenFragment {
          - auth : FirebaseAuth
          - btn_sigin : Button
          - email : EditText
          - password : EditText
          - textEmail : TextView
          - textName : TextView
          + onCreateView()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.anmelden {
      class com.example.edelhome.ui.anmelden.AnmeldenViewModel {
          - mMail : MutableLiveData<String>
          - mText : MutableLiveData<String>
          + AnmeldenViewModel()
          + getMail()
          + getText()
          + setMail()
      }
    }
  }
  

  com.example.edelhome.ui.anmelden.AnmeldenFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.anmelden.AnmeldenFragment o-- com.example.edelhome.ui.anmelden.AnmeldenViewModel : anmeldenViewModel
  com.example.edelhome.ui.anmelden.AnmeldenFragment o-- com.example.edelhome.ui.home.HomeFragment : homeFragment
  com.example.edelhome.ui.anmelden.AnmeldenViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
